tests/NormalTests/paczka1/small_fuzzy/29856751.err
Error in line 2: xdrjRaW S587 40,5
Error in line 9: 5FedXx S97 55,2
